Working Generator Implemented
A working factory class has been created add tested.

--- a/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
+++ b/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
@@ -8,10 +8,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            
+            <Button Content="Generate" Click="Button_Click" />
         </StackPanel>
         
         <!-- Canvas -->
-        <Canvas Grid.Row="1" Background="DarkGray" />
+        <Canvas Name="Landscape" Grid.Row="1" Background="DarkGray" />
     </Grid>
 </Window>
