--- a/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
+++ b/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
@@ -8,7 +8,8 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button Content="Generate" Click="Button_Click" />
+            <Button Content="Generate" Click="Button_Click" Margin="3,3,3,3"/>
+            <Button Content="BFS" Click="Button_Click_1" Margin="3,3,3,3" />
         </StackPanel>
         
         <!-- Canvas -->
