Added Iterative Deepening, BFS, and Heuristics
Moved some of the common functionality to a SearchHelper. Implemented
the two admissible heuristics.

--- a/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
+++ b/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
@@ -13,7 +13,11 @@
         </StackPanel>
         
         <!-- Canvas -->
-        <Grid Name="Paths" Grid.Row="1" Background="DarkGray" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <Grid Name="Landscape" Grid.Row="1" Panel.ZIndex="2" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
+            <Grid>
+                <Grid Name="Paths" Background="DarkGray" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                <Grid Name="Landscape" Panel.ZIndex="2" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </Window>
