--- a/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
+++ b/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
@@ -1,19 +1,107 @@
 ﻿<Window x:Class="AI_SearchAlgos.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CSC 421 - Search Algorithms" Height="350" Width="525">
-    <Grid>
+        Title="CSC 421 - Search Algorithms" MinWidth="600" Width="800">
+    <Grid Background="LightGray">
         <Grid.RowDefinitions>
-            <RowDefinition Height="35" />
+            <RowDefinition Height="90" />
+            <RowDefinition Height="90" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Button Content="Generate" Click="Button_Click" Margin="3,3,3,3"/>
-            <Button Content="BFS" Click="Button_Click_1" Margin="3,3,3,3" />
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="LightGray">
+            <GroupBox Header="Map Generation" BorderBrush="Gray" Height="Auto" Width="Auto">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80" />
+                        <ColumnDefinition Width="90" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Label Content="Width:" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <TextBox Name="MapWidth_tb" Width="20" MaxLength="2" Text="5" VerticalContentAlignment="Center" Margin="3,3,3,3"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Label Content="Height:" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <TextBox Name="MapHeight_tb" Width="20" MaxLength="2" Text="5" VerticalContentAlignment="Center" Margin="3,3,3,3"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Label Content="% Free:" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <TextBox Name="MapPercentFree_tb" Width="30" MaxLength="3" LostFocus="textbox_LostFocus" Text="50" VerticalContentAlignment="Center" Margin="3,3,3,3"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button Content="Generate" Height="22" Click="Generate_Click"/>
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
+                
+            <GroupBox Header="Search Technique" BorderBrush="Gray" >
+                <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+                    <ComboBox Name="Algorithms" Margin="3,3,3,3" />
+                    <Button Name="StartSearch" Content="Search" Click="StartSearch_Click" Margin="3,3,3,3" />
+                </StackPanel>
+            </GroupBox>
+            
+            
+            <GroupBox Header="Search Results" BorderBrush="Gray" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="180" />
+                        <ColumnDefinition Width="220" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Label Content="Time Complexity:" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <Label Name="TimeComplexity_lbl" FontWeight="Bold" Content="N/A" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Label Content="Space Complexity:" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <Label Name="SpaceComplexity_lbl" FontWeight="Bold" Content="N/A" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Label Content="Execution Time:" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <Label Name="RunTime_lbl" Content="N/A"  FontWeight="Bold" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <Label Content="seconds" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Label Content="Path Length:" Margin="3,3,3,3" VerticalContentAlignment="Center"/>
+                        <Label Name="PathLength_lbl" Content="N/A"  FontWeight="Bold" Margin="3,3,3,3" VerticalContentAlignment="Center" />
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
         </StackPanel>
+        <GroupBox Grid.Row="1" Height="85" Header="Search Simulation" BorderBrush="Gray" >
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="28" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="28" />
+                </Grid.ColumnDefinitions>
+                <!-- Problem Solution Information -->
+                <StackPanel Orientation="Horizontal" Grid.ColumnSpan="3" Grid.Row="0">
+                    <Label Name="AlgorithmUsed" Content="--ALGO--" />
+                </StackPanel>
+                
+                
+                <!-- Execution Controls -->
+                <Button Grid.Row="1"  Grid.Column="0" Content="&lt;" FontWeight="ExtraBold"  Margin="2,2,2,2" VerticalContentAlignment="Top"/>
+                <Slider Grid.Row="1" Grid.Column="1" Name="Step" Maximum="0" Minimum="0" Margin="2,2,2,2"/>
+                <Button Grid.Row="1" Grid.Column="2"  Content="&gt;" FontWeight="ExtraBold" Margin="2,2,2,2" VerticalContentAlignment="Top"/>
+            </Grid>
+        </GroupBox>
+
         
         <!-- Canvas -->
-        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
+        <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
             <Grid>
                 <Grid Name="Paths" Background="DarkGray" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 <Grid Name="Landscape" Panel.ZIndex="2" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
