--- a/a2_logic/propositional_engine/prositional_logic_engine/MainWindow.xaml
+++ b/a2_logic/propositional_engine/prositional_logic_engine/MainWindow.xaml
@@ -13,24 +13,25 @@
         </Grid.ColumnDefinitions>
     
         <GroupBox Header="In-Fix Logic" BorderBrush="Gray" BorderThickness="2">
-            <TextBox Name="tb_infix" Margin="2,2,2,2">
+            <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="30" />
+            </Grid.RowDefinitions>
+                <TextBox Name="tb_infix" Margin="2,2,2,2" TextChanged="tb_infix_TextChanged">
                 
-            </TextBox>
+                </TextBox>
+                <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="2,2,2,2">
+                    
+                </StackPanel>
+            </Grid>
         </GroupBox>
     
         <GroupBox Header="RPN Notation - Simplified to Boolean Logic" Grid.Row="1" BorderBrush="Gray" BorderThickness="2">
-            <Grid Margin="2,2,2,2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="30"/>
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <StackPanel Orientation="Horizontal">
-                    
-                </StackPanel>
-                <TextBox Name="tb_rpn" Grid.Row="1" >
+            <TextBox Name="tb_rpn" Grid.Row="1" >
+                
+            </TextBox>
 
-                </TextBox>
-            </Grid>
 
         </GroupBox>
             
