--- a/a2_logic/propositional_engine/prositional_logic_engine/MainWindow.xaml
+++ b/a2_logic/propositional_engine/prositional_logic_engine/MainWindow.xaml
@@ -1,7 +1,8 @@
 ﻿<Window x:Class="prositional_logic_engine.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525"
+        Loaded="Window_Loaded">
     <Grid Background="Gainsboro">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -9,7 +10,7 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="180" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
     
         <GroupBox Header="In-Fix Logic" BorderBrush="Gray" BorderThickness="2">
@@ -22,7 +23,9 @@
                 
                 </TextBox>
                 <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="2,2,2,2">
-                    
+                    <Button Content="Evaluate" Margin="2,2,2,2" Width="65" Click="evaluate_click"/>
+                    <Label Content="Expression Value:" />
+                    <Label Name="lbl_result" Content="Press to Evaluate" FontWeight="ExtraBlack" />
                 </StackPanel>
             </Grid>
         </GroupBox>
@@ -36,7 +39,7 @@
         </GroupBox>
             
         <GroupBox Header="Variables" BorderBrush="Gray" BorderThickness="2" Grid.Column="1" Grid.RowSpan="2">
-            <StackPanel Name="sp_variables" Margin="2,2,2,2">
+            <StackPanel Name="sp_variables" Margin="2,2,2,2" MinWidth="200">
                 
             </StackPanel>
         </GroupBox>
