--- a/a2_logic/propositional_engine/prositional_logic_engine/App.xaml
+++ b/a2_logic/propositional_engine/prositional_logic_engine/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="prositional_logic_engine.App"
+﻿<Application x:Class="pLogicEngine.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
