--- a/a2_logic/propositional_engine/prositional_logic_engine/VariableAssignmentElement.xaml
+++ b/a2_logic/propositional_engine/prositional_logic_engine/VariableAssignmentElement.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="prositional_logic_engine.VariableAssignmentElement"
+﻿<UserControl x:Class="pLogicEngine.VariableAssignmentElement"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
