--- a/a2_logic/pLogicEngine/MainWindow.xaml
+++ b/a2_logic/pLogicEngine/MainWindow.xaml
@@ -19,7 +19,7 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="30" />
             </Grid.RowDefinitions>
-                <TextBox Name="tb_infix" Margin="2,2,2,2" TextChanged="tb_infix_TextChanged">
+                <TextBox Name="tb_infix" Margin="2,2,2,2" TextChanged="tb_infix_TextChanged" SelectionChanged="tb_infix_SelectionChanged">
                 
                 </TextBox>
                 <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="2,2,2,2">
@@ -31,17 +31,11 @@
         </GroupBox>
     
         <GroupBox Header="RPN Notation - Simplified to Boolean Logic" Grid.Row="1" BorderBrush="Gray" BorderThickness="2">
-            <TextBox Name="tb_rpn" Grid.Row="1" >
-                
-            </TextBox>
-
-
+            <TextBox Name="tb_rpn" Grid.Row="1" />
         </GroupBox>
             
         <GroupBox Header="Variables" BorderBrush="Gray" BorderThickness="2" Grid.Column="1" Grid.RowSpan="2">
-            <StackPanel Name="sp_variables" Margin="2,2,2,2" MinWidth="200">
-                
-            </StackPanel>
+            <StackPanel Name="sp_variables" Margin="2,2,2,2" MinWidth="200" />
         </GroupBox>
     </Grid>
 
