--- a/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
+++ b/a1_SearchAlgos/AI_SearchAlgos/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="CSC 421 - Search Algorithms" MinWidth="600" Width="800">
-    <Grid Background="LightGray">
+    <Grid Background="Gainsboro">
         <Grid.RowDefinitions>
             <RowDefinition Height="90" />
             <RowDefinition Height="90" />
@@ -122,7 +122,7 @@
         <!-- Canvas -->
         <ScrollViewer Grid.Row="2" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" >
             <Grid>
-                <Grid Name="Paths" Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                <Grid Name="Paths" Background="DarkGray" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 <Grid Name="Landscape" Panel.ZIndex="2" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
             </Grid>
         </ScrollViewer>
